k8s/redis-deployment.yaml
# Specify API Version For Object = Deployment
# Specify Kind/Type of Object = Deployment
# Metadata = Name of Deployment
# Spec to specify number of Replicas of Pods to manage in Deployment
# Selector to specify Labels
# Label is used to specify a Selector (Component) that will be referenced by a Service  
# Pod Template is used to specify components of the Pod Metadata, Label, Container Name, Image, Port
# Spec will specify the Name of the Container That the Deployment Will Create for the Pod
# The Tag/Name of the Docker Image Stored in Docker Hub
# Expose the Default Port of the Redis Image

apiVersion: apps/v1
kind: Deployment
metadata: 
  name: redis-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
