k8s/ingress-service.yaml
# Specify API Version for the Ingress = networking.k8s.io/v1
# Kind/Type of Object = Ingress
# Metadata information = name of Ingress 
# Annotations: kubernetes.io/ingress.class: 'nginx'
# Nginix.ingress.kubernetes.io/use-regex: 'true'
# Nginix.ingress.kubernetes.io/rewrite-target: /$1
# Specification for the Ingress rules and paths
# Path for client server = / and backend service name = client-cluster-ip-service and Port = 3000
# Path for Api server = /api/ & backend service name = server-cluster-ip-service and Port = 5000

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
